--- a/HelloWorldDemo/WebContent/hello.html
+++ b/HelloWorldDemo/WebContent/hello.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p>Hello</p>
-<form action="/HelloWorldDemo/hello" method="post">
+<form action="/hello" method="post">
 name:- <input name="name" type="text">
 <input type="submit" value="submit">
 </form>
