changed the helloWorld to --> a Login form DB.sql file created and added it in resource dir restructured the project to follow a pattern implemented DB connection added mysql jar in LIB

--- a/HelloWorldDemo/WebContent/hello.html
+++ b/HelloWorldDemo/WebContent/hello.html
@@ -5,10 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<p>Hello</p>
-<form action="/HelloWorldDemo/MainFirstServlet" method="post">
-name:- <input name="name" type="text">
-<input type="submit" value="submit">
-</form>
+<p>Hello Welcome To My Page</p>
+<a href="Login.jsp">Click To Login</a>
 </body>
 </html>
