--- a/HelloWorldDemo/WebContent/hello.html
+++ b/HelloWorldDemo/WebContent/hello.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <p>Hello Welcome To My Page</p>
-<a href="Login.jsp">Click To Login</a>
+
+<a href="Login.jsp">Click To Login</a><br>
+<a href="Test.jsp">Click To Test</a>
 </body>
 </html>
