--- a/HelloWorldDemo/WebContent/hello.html
+++ b/HelloWorldDemo/WebContent/hello.html
@@ -9,5 +9,6 @@
 
 <a href="Login.jsp">Click To Login</a><br>
 <a href="Test.jsp">Click To Test</a>
+<a href="MainTest.jsp">Click To Test</a>
 </body>
 </html>
