--- a/HelloWorldDemo/WebContent/hello.html
+++ b/HelloWorldDemo/WebContent/hello.html
@@ -5,10 +5,11 @@
 <title>Insert title here</title>
 </head>
 <body>
-<p>Hello Welcome To My Page</p>
+	<p>Hello Welcome To My Page</p>
 
-<a href="Login.jsp">Click To Login</a><br>
-<a href="Test.jsp">Click To Test</a>
-<a href="MainTest.jsp">Click To Test</a>
+	<a href="Login.jsp">Click To Login</a>
+	<br>
+	<!-- <a href="Test.jsp">Click To Test</a> -->
+	<a href="MainTest.jsp">Click To Test</a>
 </body>
 </html>
